[package]
name = "bevy_mod_transform2d"
description = "A 2D Transform component for The Bevy game-engine."
version = "0.1.0"
edition = "2021"

repository = "http://github.com/devil-ira/bevy_mod_transform2d"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]

[dependencies]
bevy = "0.8.0-dev"
bevy_rapier2d = { version = "*", default-features = false, optional = true }

[patch.crates-io]
bevy = { path = "../bevy" }
bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d" }
nalgebra = { path = "../nalgebra" }
